overflow problem finally fixed

--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -47,7 +47,8 @@
    }
 
    .profile-circle{
-      display: none;
+      top: 15.5rem;
+      right: -6rem;
    }
 
    .profile-rings{
